docs: tighten docs and generate agent references
- Remove obsolete docs/archive + reference material

- Add generated env var + metrics catalogs under var/agents/

- Convert FEATURE_FLAGS/OBSERVABILITY to pointer docs

- Fail CI when agent artifacts are stale